compiler/test-data/parser/control/errors/select_missing_brace.frel
module control.errors.select_missing_brace

blueprint Bad {
    x : i32 = 5

    select
        x < 0 => text { "negative" }
        else => text { "positive" }
    }
}
